@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2007-12-09 07:23:17 $ $Revision: 1.5 $
+\  $Date: 2007-12-12 19:36:38 $ $Revision: 1.6 $
 \
 \ ==============================================================================
 
@@ -40,7 +40,7 @@ include ffl/config.fs
 ( ANS Structure syntax words )
 
 [UNDEFINED] begin-structure [IF]
-: begin-structure   ( "<spaces>name" -- addr 0 ; -- n = Start definition of a named structure, return the structure size )
+: begin-structure   ( "<spaces>name" -- structure-sys ; -- n = Start definition of a named structure, return the structure size )
   create
     here 0 , 0
   does>
@@ -50,7 +50,7 @@ include ffl/config.fs
 
 
 [UNDEFINED] end-structure [IF]
-: end-structure   ( addr n -- = End a structure definition )
+: end-structure   ( structure-sys -- = End a structure definition )
   swap !
 ;
 [THEN]
@@ -59,7 +59,7 @@ include ffl/config.fs
 ( ANS field definition words )
 
 [UNDEFINED] +field [IF]
-: +field   ( n "<spaces>name" -- ; addr1 -- addr2 = Create a structure field of size n bytes, return the field address )
+: +field   ( structure-sys n "<spaces>name" -- structure-sys ; addr1 -- addr2 = Create a structure field of size n bytes, return the field address )
   create
     over , +
   does>
@@ -69,42 +69,42 @@ include ffl/config.fs
 
 
 [UNDEFINED] cfield: [IF]
-: cfield:   ( n1 "<spaces>name" -- n2 ; addr1 -- addr2 = Create a structure field of 1 char, return the field address )
+: cfield:   ( structure-sys "<spaces>name" -- structure-sys ; addr1 -- addr2 = Create a structure field of 1 char, return the field address )
   1 chars +field
 ;
 [THEN]
 
 
 [UNDEFINED] field: [IF]
-: field:   ( n1 "<spaces>name" -- n2 ; addr1 -- addr2 = Create a structure field of 1 cell, return the field address )
+: field:   ( structure-sys "<spaces>name" -- structure-sys ; addr1 -- addr2 = Create a structure field of 1 cell, return the field address )
   aligned cell +field
 ;
 [THEN]
 
 
 [UNDEFINED] dfield: [IF]
-: dfield:   ( n1 "<spaces>name" -- n2 ; addr1 -- addr2 = Create a structure field of 1 double, return the field address )
+: dfield:   ( structure-sys "<spaces>name" -- structure-sys ; addr1 -- addr2 = Create a structure field of 1 double, return the field address )
   aligned 2 cells +field
 ;
 [THEN]
 
 
 [UNDEFINED] ffield: [DEFINED] faligned AND [IF]
-: ffield:   ( n1 "<spaces>name" -- n2 ; addr1 -- addr2 = Create a structure field of 1 float, return the field address )
+: ffield:   ( structure-sys "<spaces>name" -- structure-sys ; addr1 -- addr2 = Create a structure field of 1 float, return the field address )
   faligned 1 floats +field
 ;
 [THEN]
 
 
 [UNDEFINED] sffield: [DEFINED] sfaligned AND [IF]
-: sffield:   ( n1 "<spaces>name" -- n2 ; addr1 -- addr2 = Create a structure field of 1 single float, return the field address )
+: sffield:   ( structure-sys "<spaces>name" -- structure-sys ; addr1 -- addr2 = Create a structure field of 1 single float, return the field address )
   sfaligned 1 sfloats +field
 ;
 [THEN]
 
 
 [UNDEFINED] dffield: [DEFINED] dfaligned AND [IF]
-: dffield:   ( n1 "<spaces>name" -- n2 ; addr1 -- addr2 = Create a structure field of 1 double float, return the field address )
+: dffield:   ( structure-sys "<spaces>name" -- structure-sys ; addr1 -- addr2 = Create a structure field of 1 double float, return the field address )
   dfaligned 1 dfloats +field
 ;
 [THEN]
@@ -113,28 +113,28 @@ include ffl/config.fs
 ( Array field definition words )
 
 [UNDEFINED] cfields: [IF]
-: cfields:   ( n1 n2 "<spaces>name" -- n3 ; addr1 -- addr2 = Create a structure field of n2 chars, return the field address )
+: cfields:   ( structure-sys n "<spaces>name" -- structure-sys ; addr1 -- addr2 = Create a structure field of n chars, return the field address )
   chars +field
 ;
 [THEN]
 
 
 [UNDEFINED] fields: [IF]
-: fields:   ( n1 n2 "<spaces>name" -- n3 ; addr1 -- addr2 = Create a structure field of n2 cells, return the field address )
+: fields:   ( structure-sys n "<spaces>name" -- structure-sys ; addr1 -- addr2 = Create a structure field of n cells, return the field address )
   swap aligned swap cells +field
 ;
 [THEN]
 
 
 [UNDEFINED] dfields: [IF]
-: dfields:   ( n1 n2 "<spaces>name" -- n3 ; addr1 -- addr2 = Create a structure field of n2 doubles, return the field address )
+: dfields:   ( structure-sys n "<spaces>name" -- structure-sys ; addr1 -- addr2 = Create a structure field of n doubles, return the field address )
   swap aligned swap 2* cells +field
 ;
 [THEN]
 
 
 [UNDEFINED] ffields: [DEFINED] faligned AND [IF]
-: ffields:   ( n1 n2 "<spaces>name" -- n3 ; addr1 -- addr2 = Create a structure field of n2 floats, return the field address )
+: ffields:   ( structure-sys n "<spaces>name" -- structure-sys ; addr1 -- addr2 = Create a structure field of n floats, return the field address )
   swap faligned swap floats +field
 ;
 [THEN]
